<resources>
    <string name="app_name">ApeState</string>
    <string name="welcome_to_apestate">Welcome to ApeState!</string>
    <string name="textview">TextView</string>
    <string name="todo">TODO</string>
    <string name="button">Button</string>
    <string name="next">next</string>
    <string name="click_the_next_button_to_learn_about_some_apes">click the next button to learn about some apes!</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="todo2">TODO</string>
    <string name="apePrompt">Click on an image below to learn more about an ape!</string>
    <string name="about_information">My name is Jalynn Hicks, I am the developer and the founder of ApeState. My mission is to bring educational information on all sorts of great apes since they’re mostly related to us more than other organism and species in the world. You would be very surprised how many similarities we share with our closest cousins.

This app is for educational purposes only and information provided in this app are from educational resources. All rights reserved.

Thank you for using my app, ApeState!
</string>
    <string name="about">ABOUT</string>
    <string name="chimpanzee_description" />
    <string name="title_activity_chimp">ChimpActivity</string>
    <string name="second_chimp_picture">second_chimp_picture</string>
    <string name="chimpanzee">Chimpanzee</string>
    <string name="pan_troglodytes">Pan troglodytes</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor_incididunt_ut_labore_et_dolore_magna_aliqua_ut_enim_ad_minim_veniam_quis_nostrud_exercitation_ullamco_laboris_nisi_ut_aliquip_ex_ea_commodo_consequat_duis_aute_irure_dolor_in_reprehenderit_in_voluptate_velit_esse_cillum_dolore_eu_fugiat_nulla_pariatur_excepteur_sint_occaecat_cupidatat_non_proident_sunt_in_culpa_qui_officia_deserunt_mollit_anim_id_est_laborum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="title_activity_bonobo">BonoboActivity</string>
    <string name="bonobo">Bonobo</string>
    <string name="Pan_paniscus">Pan paniscus</string>
    <string name="second_bonobo_picture">second bonobo picture</string>
    <string name="second_orangutan_picture">second orangutan picture</string>
    <string name="orangutan">Orangutan</string>
    <string name="pongo_abelii">Pongo abelii</string>
    <string name="title_activity_orangutan">OrangutanActivity</string>
    <string name="pongo_pygmaeus">Pongo Pygmaeus</string>
    <string name="title_activity_gibbon">GibbonActivity</string>
    <string name="second_gibbon_picture">second gibbon picture</string>
    <string name="gibbon">Gibbon</string>
    <string name="hylobatidae">Hylobatidae</string>
    <string name="chimpanzee_info">Chimpanzee, (Pan troglodytes), species of ape that, along with the bonobo, is most closely related to humans. Chimpanzees inhabit tropical forests and savannas of equatorial Africa from Senegal in the west to Lake Albert and northwestern Tanzania in the east. Individuals vary considerably in size and appearance, but chimpanzees stand approximately 1–1.7 metres (3–5.5 feet) tall when erect and weigh about 32–60 kg (70–130 pounds). Males tend to be larger and more robust than females. Chimpanzees are covered by a coat of brown or black hair, but their faces are bare except for a short white beard. Skin colour is generally white except for the face, hands, and feet, which are black. The faces of younger animals may be pinkish or whitish. Among older males and females, the forehead often becomes bald and the back becomes gray.</string>
    <string name="bonobo_info">Bonobo, (Pan paniscus), also called pygmy chimpanzee, ape that was regarded as a subspecies of the chimpanzee (Pan troglodytes) until 1933, when it was first classified separately. The bonobo is found only in lowland rainforests along the south bank of the Congo River in the Democratic Republic of the Congo. Closely resembling the chimpanzee in both physical appearance and mode of life, the bonobo is more slender, with longer limbs, a narrower chest, and a rounder head with a less-protruding face. Bonobos are not much smaller than chimpanzees: males weigh about 39 kg (86 pounds) and females about 31 kg, but both are the same height, standing 115 cm (3.8 feet) tall when erect.\n\nBonobos feed mainly in trees and descend to the ground to move to other trees. They eat mostly fruits (which they often share with one another) and other vegetation, such as herbs and roots. In some places, food is washed in streams. The diet is supplemented by invertebrates such as caterpillars and earthworms. In rare instances, they have been observed eating bats, flying squirrels, and even young duikers (small antelopes). Unlike chimpanzees, bonobos do not hunt monkeys but instead play with and groom them. Furthermore, the phenomena of infanticide, cannibalism, and lethal invasion seen among chimps have never been observed among bonobos. Relationships between separate communities also differ—individuals often intermingle. Adult males do not intermingle but, unlike chimpanzees, are not hostile. The egalitarian and peaceful bonobo society might have evolved as a result of reduced competition due to the abundance of food in their habitats.</string>
    <string name="orangutan_info">The name orangutan means \"man of the forest\" in the Malay language. In the lowland forests in which they reside, orangutans live solitary existences. They feast on wild fruits like lychees, mangosteens, and figs, and slurp water from holes in trees. They make nests in trees of vegetation to sleep at night and rest during the day. Adult male orangutans can weigh up to 200 pounds. Flanged males have prominent cheek pads called flanges and a throat sac used to make loud verbalizations called long calls. An unflanged male looks like an adult female. In a biological phenomenon unique among primates, an unflanged male can change to a flanged male for reasons that are not yet fully understood.\n\nBornean and Sumatran orangutans differ a little in appearance and behavior. While both have shaggy reddish fur, Sumatran orangutans have longer facial hair. Sumatran orangutans are reported to have closer social bonds than their Bornean cousins. Bornean orangutans are more likely to descend from the trees to move around on the ground. Both species have experienced sharp population declines. A century ago there were probably more than 230,000 orangutans in total, but the Bornean orangutan is now estimated at about 104,700 based on updated geographic range (Endangered) and the Sumatran about 7,500 (Critically Endangered).</string>
    <string name="gibbon_info">Gibbon, (family Hylobatidae), any of approximately 20 species of small apes found in the tropical forests of Southeast Asia. Gibbons, like the great apes (gorillas, orangutans, chimpanzees, and bonobos), have a humanlike build and no tail, but gibbons seem to lack higher cognitive abilities and self-awareness. They also differ from great apes in having longer arms, dense hair, and a throat sac used for amplifying sound. Gibbon voices are loud, are musical in tone, and carry over long distances. The most characteristic vocalization is the “great call,” usually a duet in which the female leads and the male joins in with less complex notes, used as a territorial marker by both sexes. The various species of gibbons can be divided into four genera: Hoolock, Hylobates, Nomascus, and Symphalangus. Molecular data indicate that the four groups are as different from one another as chimpanzees are from humans.\n\nGibbons are arboreal and move from branch to branch with speed and great agility by swinging from their arms (brachiating). On the ground, gibbons walk erect with the arms held aloft or behind. They are active during the day and live in small monogamous groups that defend territories in the treetops. They feed mainly on fruit, with varying proportions of leaves and with some insects and bird eggs as well as young birds. Single offspring are born after about seven months’ gestation and take seven years to mature.</string>
</resources>