<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".FirstFragment">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="373dp"
            android:layout_height="267dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="19dp"
            android:src="@drawable/chimpanzee2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:contentDescription="@string/second_chimp_picture" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_marginStart="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="56dp"
            android:text="@string/chimpanzee"
            android:textSize="48sp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/pan_troglodytes"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="373dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/chimpanzee_info"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:layout_constraintVertical_bias="0.21" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>